src/objects/Field_Dependencies__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>R3 created a custom settings for field dependencies.</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>R3 - Field Dependencies country value</description>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Main_Business__c</fullName>
        <description>R3 - Local Main Business created a custom settings for country field dependencies.</description>
        <label>Local Main Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <description>R3 - Sales District created a custom settings for country field dependencies.</description>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>R3 - Sales Office created a custom settings for country field dependencies.</description>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Dependencies</label>
</CustomObject>